--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Kurt</h1>
       <h2>a programmer</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain.png">
+      <img class="bottom-cloud cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="mountain" src="images/mountain.png" alt="mountain.png">
     </div>
 
       <div class="middle-container">
         <div class="profile">
-          <img src="images/circle-cropped.png" alt="profile-img">
+          <img class="profile-pic" src="images/profpic.png" alt="profile-img">
           <h2>Hello.</h2>
           <p class="intro">I am a full-stack web developer. The founder and CEO of APEX, I also love coffee ☕</p>
         </div>
@@ -27,20 +27,30 @@
           <h2>My Skills.</h2>
           <div class="skill-row">
             <img class="skill-image" src="images/html.png" alt="html-img">
-            <h3>Lorem & Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            <h3>HTML 5</h3>
+            <p>HTML 5 is markup language used for structuring and presenting website content on thw World Wide Web.</p>
           </div>
           <div class="skill-row">
             <img class="skill-image2" src="images/css.png" alt="css-img">
-            <h3>Lorem Ipsum Dolor</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            <h3>CSS 3</h3>
+            <p>CSS 3 is a programming language used for styling and designing HTML elements, making websites appealing and attractive.</p>
+          </div>
+          <div class="skill-row">
+            <img class="skill-image3" src="images/JavaScript.png" alt="JavaScript-img">
+            <h3>JavaScript</h3>
+            <p>JavaScript is a programming language used to create animations, effects, and other functions to a website.</p>
+          </div>
+          <div class="skill-row">
+            <img class="skill-image4" src="images/Bootstrap.png" alt="Bootstrap-img">
+            <h3>Bootstrap</h3>
+            <p>Bootstrap is CSS framework directed at responsive, mobile-first front-end web development.</p>
           </div>
         </div>
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>Need Your Own Website?</h3>
-          <p class="message-me">Do you need a website for your business? Or for your blogs? I can help you set on th web.</p>
+          <p class="message-me">Do you need a website for your business? Or for your blogs? I can help you set on the web.</p>
           <a href="mailto:kurt.agliday25@gmail.com"><input class="button" type="submit" name="btn" value="CONTACT ME"></a>
         </div>
       </div>
