--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="top-container">
       <img class="top-cloud cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Kurt</h1>
-      <h2>a programmer</h2>
+      <h2 class="toph2">a programmer</h2>
       <img class="bottom-cloud cloud" src="images/cloud.png" alt="cloud-img">
       <img class="mountain" src="images/mountain.png" alt="mountain.png">
     </div>
@@ -28,7 +28,7 @@
           <div class="skill-row">
             <img class="skill-image" src="images/html.png" alt="html-img">
             <h3>HTML 5</h3>
-            <p>HTML 5 is markup language used for structuring and presenting website content on thw World Wide Web.</p>
+            <p>HTML 5 is markup language used for structuring and presenting website content on the World Wide Web.</p>
           </div>
           <div class="skill-row">
             <img class="skill-image2" src="images/css.png" alt="css-img">
