--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="top-container container-fluid">
       <img class="top-cloud cloud" src="images/cloud.png" alt="cloud-img">
-      <h1>I'm Kurt</h1>
+      <h1 class="toph1">I'm Kurt</h1>
       <h2 class="toph2">a programmer</h2>
       <img class="bottom-cloud cloud" src="images/cloud.png" alt="cloud-img">
       <img class="mountain" src="images/mountain.png" alt="mountain.png">
@@ -27,7 +27,7 @@
           <h2>Hello.</h2>
           <p class="intro">I am a full-stack web developer. The founder and CEO of APEX, I also love coffee ☕</p>
         </div>
-        <hr>
+        <hr class="breaker">
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
@@ -51,7 +51,7 @@
             <p>Bootstrap is CSS framework directed at responsive, mobile-first front-end web development.</p>
           </div>
         </div>
-        <hr>
+        <hr class="breaker">
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>Need Your Own Website?</h3>
